<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_btwn_views"
    tools:context="com.example.harryschmach.justkotlin.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty_str"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_btwn_views"
        android:paddingBottom="@dimen/spacing_btwn_views"
        >

        <Button
            android:layout_width="@dimen/plus_minus_dims"
            android:layout_height="@dimen/plus_minus_dims"
            android:text="@string/inc_qty"
            android:onClick="increaseQuant"
            />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/null_qty_str"

            android:paddingLeft="@dimen/spacing_btwn_views"
            android:paddingRight="@dimen/spacing_btwn_views"

            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="@dimen/plus_minus_dims"
            android:layout_height="@dimen/plus_minus_dims"
            android:text="@string/dec_qty"
            android:onClick="decreaseQuant"
            />
    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Price"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/spacing_btwn_views"

        android:layout_marginTop="@dimen/spacing_btwn_views"
        android:text="@string/null_qty_str"

        android:textColor="@android:color/black"
        android:textSize="16sp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_str_for_button"
        android:onClick="submitOrder"
        />

</LinearLayout>
